--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -9,6 +9,7 @@
     - mongodb
     - catalogue
   tasks: 
+  ####CREATE####
   - name: create ec2 instance
     amazon.aws.ec2_instance:
       instance_type: "t3.micro"
@@ -21,9 +22,9 @@
         env: "{{ env }}"
         Name: "{{ item }}-{{ env }}"
     loop: "{{ instances }}"
-    register: "ec2-output"          #we take the output of instance, and give to r53 to create records
+    register: ec2_output         #we take the output of instance, and give to r53 to create records
 
 
   - name: print the output
     ansible.builtin.debug:
-      msg: "{{ ec2-output }}"
+      msg: "{{ ec2_output }}"
