--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -4,6 +4,7 @@
   vars:
     sg_id: sg-017b4d9d9d993f2b1
     ami_id: ami-0220d79f3f480ecf5
+    domain_name: exploreops.online
     env: dev 
     instances:
     - mongodb
@@ -28,3 +29,16 @@
   - name: print the output
     ansible.builtin.debug:
       msg: "{{ ec2_output }}"
+
+
+  - name: create r53 records
+    amazon.aws.route53:
+      state: present
+      zone: "{{ domain_name }}"
+      record: "{{ item.item }}-{{ env }}.{{ domain_name }}"   #mongodb-dev.exploreops.online
+      type: A 
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      wait: true 
+    loop: "{{ec2_output.results}}"
+
