--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -6,6 +6,7 @@
     ami_id: ami-0220d79f3f480ecf5
     domain_name: exploreops.online
     env: dev 
+    action: create 
     instances:
     - mongodb
     - catalogue
@@ -24,12 +25,12 @@
         Name: "{{ item }}-{{ env }}"
     loop: "{{ instances }}"
     register: ec2_output         #we take the output of instance, and give to r53 to create records
-
+    when: action == "create"
 
   - name: print the output
     ansible.builtin.debug:
       msg: "{{ ec2_output }}"
-
+    when: action == "create"
 
   - name: create r53 records
     amazon.aws.route53:
@@ -52,4 +53,13 @@
       value: "{{ item.instances[0].public_ip_address }}"
       wait: true 
     loop: "{{ec2_output.results}}"
-    when: item.item == "frontend"
+    when: 
+    - item.item == "frontend"
+    - action == "create"
+
+
+  - name: delete ec2 instance
+    amazon.aws.ec2_instance:
+      state: absent
+      name: "{{ item }}-{{ env }}"
+    loop: "{{ instances }}"
