--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -33,4 +33,4 @@
     ansible.builtin.unarchive:
       src: /tmp/catalogue.zip
       dest: /app
-      remote_src: yes
+      remote_src: yes                 #File is already present on the target server, Ansible will NOT copy it, It will just extract it
