--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks: 
   - name: enable nodejs 20
-    ansible.builtin.command: dnf module enable nodejs:20 -y        #this doesn't need shellm(don't need '|' '>')
+    ansible.builtin.command: dnf module enable nodejs:20 -y        #this doesn't need shell(don't need '|' '>')
   
   - name: install nodejs
     ansible.builtin.dnf:
