--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -42,3 +42,15 @@
       wait: true
     loop: "{{ ec2_output.results }}"
 
+  - name: create route53 records
+    amazon.aws.route53:
+      state: present
+      zone: "{{ domain_name }}"
+      record: "roboshop-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].public_ip_address }}"
+      wait: true
+    loop: "{{ ec2_output.results }}"
+    when: item.item == "frontend"
+
