--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -59,21 +59,21 @@
     - item.item == "frontend"
     - when: action == "create"
 
-  - name: destory r53 records
-    amazon.aws.route53:
-      state: absent
-      zone: "{{ domain_name }}"
-      record: "{{ item }}-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
-      type: A
-      ttl: 1
-    loop: "{{ instances }}"
-    when: action == destroy 
+  # - name: destory r53 records
+  #   amazon.aws.route53:
+  #     state: absent
+  #     zone: "{{ domain_name }}"
+  #     record: "{{ item }}-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
+  #     type: A
+  #     ttl: 1
+  #   loop: "{{ instances }}"
+  #   when: action == destroy 
 
 
-  - name: delete ec2 instance
-    amazon.aws.ec2_instance:
-      state: absent
-      name: "{{ item }}-{{ env }}"
-    loop: "{{ instances }}" 
-    when: action == destroy
+  # - name: delete ec2 instance
+  #   amazon.aws.ec2_instance:
+  #     state: absent
+  #     name: "{{ item }}-{{ env }}"
+  #   loop: "{{ instances }}" 
+  #   when: action == destroy
 
