--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -11,69 +11,69 @@
     - mongodb
     - catalogue
   tasks:
-  - name: create ec2 instance
-    amazon.aws.ec2_instance:
-      instance_type: "t3.micro"
-      security_group: "{{ SG_ID }}"
-      image_id: "{{ IMAGE_ID }}"
-      #networking and availability zone we are leaving it for default
-      name: "{{ item }}-{{ env }}"
-      tags: 
-        Project: roboshop
-        Component: "{{ item }}"
-        Environment: "{{ env }}"
-        Name: "{{ item }}-{{ env }}"
-    loop: "{{ instances }}"
-    register: ec2_output         #we wrote to create instance but to create r53, we need to have the instance output(ip, instanceid and all) for that we use register and keep that output in register
-    when: action == "create"
+  # - name: create ec2 instance
+  #   amazon.aws.ec2_instance:
+  #     instance_type: "t3.micro"
+  #     security_group: "{{ SG_ID }}"
+  #     image_id: "{{ IMAGE_ID }}"
+  #     #networking and availability zone we are leaving it for default
+  #     name: "{{ item }}-{{ env }}"
+  #     tags: 
+  #       Project: roboshop
+  #       Component: "{{ item }}"
+  #       Environment: "{{ env }}"
+  #       Name: "{{ item }}-{{ env }}"
+  #   loop: "{{ instances }}"
+  #   register: ec2_output         #we wrote to create instance but to create r53, we need to have the instance output(ip, instanceid and all) for that we use register and keep that output in register
+  #   when: action == "create"
 
-  - name: print the output
-    ansible.builtin.debug:
-      msg: "{{ ec2_output }}"
-    when: action == "create"
+  # - name: print the output
+  #   ansible.builtin.debug:
+  #     msg: "{{ ec2_output }}"
+  #   when: action == "create"
 
 
-  - name: create route53 records
-    amazon.aws.route53:
-      state: present
-      zone: "{{ domain_name }}"
-      record: "{{ item.item }}-{{ env }}.{{ domain_name }}"   #mongodb-dev.exploreops.online
-      type: A
-      ttl: 1
-      value: "{{ item.instances[0].private_ip_address }}"
-      wait: true
-    loop: "{{ ec2_output.results }}"
-    when: action == "create"
-
-  - name: create route53 records
-    amazon.aws.route53:
-      state: present
-      zone: "{{ domain_name }}"
-      record: "roboshop-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
-      type: A
-      ttl: 1
-      value: "{{ item.instances[0].public_ip_address }}"
-      wait: true
-    loop: "{{ ec2_output.results }}"
-    when: #below both needs to be successful &&
-    - item.item == "frontend"
-    - when: action == "create"
-
-  # - name: destory r53 records
+  # - name: create route53 records
   #   amazon.aws.route53:
-  #     state: absent
+  #     state: present
   #     zone: "{{ domain_name }}"
-  #     record: "{{ item }}-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
+  #     record: "{{ item.item }}-{{ env }}.{{ domain_name }}"   #mongodb-dev.exploreops.online
   #     type: A
   #     ttl: 1
-  #   loop: "{{ instances }}"
-  #   when: action == destroy 
+  #     value: "{{ item.instances[0].private_ip_address }}"
+  #     wait: true
+  #   loop: "{{ ec2_output.results }}"
+  #   when: action == "create"
+
+  # - name: create route53 records
+  #   amazon.aws.route53:
+  #     state: present
+  #     zone: "{{ domain_name }}"
+  #     record: "roboshop-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
+  #     type: A
+  #     ttl: 1
+  #     value: "{{ item.instances[0].public_ip_address }}"
+  #     wait: true
+  #   loop: "{{ ec2_output.results }}"
+  #   when: #below both needs to be successful &&
+  #   - item.item == "frontend"
+  #   - when: action == "create"
+
+  - name: destory r53 records
+    amazon.aws.route53:
+      state: absent
+      zone: "{{ domain_name }}"
+      record: "{{ item }}-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
+      type: A
+      ttl: 1
+    loop: "{{ instances }}"
+    when: action == destroy 
 
 
-  # - name: delete ec2 instance
-  #   amazon.aws.ec2_instance:
-  #     state: absent
-  #     name: "{{ item }}-{{ env }}"
-  #   loop: "{{ instances }}" 
-  #   when: action == destroy
+  - name: delete ec2 instance
+    amazon.aws.ec2_instance:
+      state: absent
+      name: "{{ item }}-{{ env }}"
+    loop: "{{ instances }}" 
+    when: action == destroy
 
