--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -6,7 +6,7 @@
     IMAGE_ID: "ami-0220d79f3f480ecf5"
     domain_name: exploreops.online
     env: dev
-    action: create
+    operation: create
     instances:         #if we want few more instances to create then we can override the variable(instances) from command line cuz var. precedence order high for cline than play level vars
     - mongodb
     - catalogue
@@ -25,12 +25,12 @@
   #       Name: "{{ item }}-{{ env }}"
   #   loop: "{{ instances }}"
   #   register: ec2_output         #we wrote to create instance but to create r53, we need to have the instance output(ip, instanceid and all) for that we use register and keep that output in register
-  #   when: action == "create"
+  #   when: operation == "create"
 
   # - name: print the output
   #   ansible.builtin.debug:
   #     msg: "{{ ec2_output }}"
-  #   when: action == "create"
+  #   when: operation == "create"
 
 
   # - name: create route53 records
@@ -43,7 +43,7 @@
   #     value: "{{ item.instances[0].private_ip_address }}"
   #     wait: true
   #   loop: "{{ ec2_output.results }}"
-  #   when: action == "create"
+  #   when: operation == "create"
 
   # - name: create route53 records
   #   amazon.aws.route53:
@@ -57,7 +57,21 @@
   #   loop: "{{ ec2_output.results }}"
   #   when: #below both needs to be successful &&
   #   - item.item == "frontend"
-  #   - when: action == "create"
+  #   - when: operation == "create"
+
+
+  - name: delete r53 records for frontend
+    amazon.aws.route53:
+      state: absent
+      zone: "{{ domain_name }}"
+      record: "roboshop-{{ env }}.{{ domain_name }}" # roboshop-dev.daws88s.online
+      type: A
+      ttl: 1
+    loop: "{{ instances }}"
+    when:  
+    - item == "frontend"
+    - operation == "destroy"
+
 
   - name: destory r53 records
     amazon.aws.route53:
@@ -67,7 +81,7 @@
       type: A
       ttl: 1
     loop: "{{ instances }}"
-    when: action == destroy 
+    when: operation == "destroy" 
 
 
   - name: delete ec2 instance
@@ -75,5 +89,5 @@
       state: absent
       name: "{{ item }}-{{ env }}"
     loop: "{{ instances }}" 
-    when: action == destroy
+    when: operation == "destroy"
 
