--- a/roboshop.yaml
+++ b/roboshop.yaml
@@ -11,53 +11,53 @@
     - mongodb
     - catalogue
   tasks:
-  # - name: create ec2 instance
-  #   amazon.aws.ec2_instance:
-  #     instance_type: "t3.micro"
-  #     security_group: "{{ SG_ID }}"
-  #     image_id: "{{ IMAGE_ID }}"
-  #     #networking and availability zone we are leaving it for default
-  #     name: "{{ item }}-{{ env }}"
-  #     tags: 
-  #       Project: roboshop
-  #       Component: "{{ item }}"
-  #       Environment: "{{ env }}"
-  #       Name: "{{ item }}-{{ env }}"
-  #   loop: "{{ instances }}"
-  #   register: ec2_output         #we wrote to create instance but to create r53, we need to have the instance output(ip, instanceid and all) for that we use register and keep that output in register
-  #   when: operation == "create"
+  - name: create ec2 instance
+    amazon.aws.ec2_instance:
+      instance_type: "t3.micro"
+      security_group: "{{ SG_ID }}"
+      image_id: "{{ IMAGE_ID }}"
+      #networking and availability zone we are leaving it for default
+      name: "{{ item }}-{{ env }}"
+      tags: 
+        Project: roboshop
+        Component: "{{ item }}"
+        Environment: "{{ env }}"
+        Name: "{{ item }}-{{ env }}"
+    loop: "{{ instances }}"
+    register: ec2_output         #we wrote to create instance but to create r53, we need to have the instance output(ip, instanceid and all) for that we use register and keep that output in register
+    when: operation == "create"
 
-  # - name: print the output
-  #   ansible.builtin.debug:
-  #     msg: "{{ ec2_output }}"
-  #   when: operation == "create"
+  - name: print the output
+    ansible.builtin.debug:
+      msg: "{{ ec2_output }}"
+    when: operation == "create"
 
 
-  # - name: create route53 records
-  #   amazon.aws.route53:
-  #     state: present
-  #     zone: "{{ domain_name }}"
-  #     record: "{{ item.item }}-{{ env }}.{{ domain_name }}"   #mongodb-dev.exploreops.online
-  #     type: A
-  #     ttl: 1
-  #     value: "{{ item.instances[0].private_ip_address }}"
-  #     wait: true
-  #   loop: "{{ ec2_output.results }}"
-  #   when: operation == "create"
+  - name: create route53 records
+    amazon.aws.route53:
+      state: present
+      zone: "{{ domain_name }}"
+      record: "{{ item.item }}-{{ env }}.{{ domain_name }}"   #mongodb-dev.exploreops.online
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      wait: true
+    loop: "{{ ec2_output.results }}"
+    when: operation == "create"
 
-  # - name: create route53 records
-  #   amazon.aws.route53:
-  #     state: present
-  #     zone: "{{ domain_name }}"
-  #     record: "roboshop-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
-  #     type: A
-  #     ttl: 1
-  #     value: "{{ item.instances[0].public_ip_address }}"
-  #     wait: true
-  #   loop: "{{ ec2_output.results }}"
-  #   when: #below both needs to be successful &&
-  #   - item.item == "frontend"
-  #   - when: operation == "create"
+  - name: create route53 records
+    amazon.aws.route53:
+      state: present
+      zone: "{{ domain_name }}"
+      record: "roboshop-{{ env }}.{{ domain_name }}"   #roboshop-dev.exploreops.online
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].public_ip_address }}"
+      wait: true
+    loop: "{{ ec2_output.results }}"
+    when: #below both needs to be successful &&
+    - item.item == "frontend"
+    - when: operation == "create"
 
 
   - name: delete r53 records for frontend
