--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -62,7 +62,7 @@
       msg: "{{ catalogue_output }}"   #if stdout less than 0, products yet to load, then load
 
   - name: load the products
-    ansible.builtin.shell: mongosh --host "{{ MONGODB_HOST }}" </app/db/master-data.json
+    ansible.builtin.shell: mongosh --host "{{ MONGODB_HOST }}" </app/db/master-data.js
     when: catalogue_output.stdout  | int < 0
 
 
