--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -18,12 +18,22 @@
       shell: /sbin/nologin
       comment: "Roboshop system user"
 
+  - name: delete app directory                               
+    ansible.builtin.file:
+      path: /app
+      state: absent 
+
   - name: create app directory
     ansible.builtin.file:                     ##for linux on a kernal level, everything is a file, directory is just like a path
       path: /app
       state: directory
 
-  - name: download catalogue
+  - name: delete catalogue zip file          #everyday/ often code changes will happen and devs push it, here we are delteing existing code and downloading new code
+    ansible.builtin.file:
+      path: /tmp/catalogue.zip
+      state: absent
+
+  - name: download catalogue     
     ansible.builtin.get_url:
       url: https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip
       dest: /tmp/catalogue.zip
