--- a/inventory.ini
+++ b/inventory.ini
@@ -4,6 +4,15 @@ mongodb-dev.exploreops.online
 [catalogue]
 catalogue-dev.exploreops.online
 
+[redis]
+redis-dev.exploreops.online
+
+[user]
+user-dev.exploreops.online
+
+[cart]
+cart-dev.exploreops.online
+
 [all:vars]
 ansible_user=ec2-user
 ansible_password=DevOps321
