--- a/inventory.ini
+++ b/inventory.ini
@@ -17,3 +17,7 @@ cart-dev.exploreops.online
 ansible_user=ec2-user
 ansible_password=DevOps321
 MONGODB_HOST=mongodb-dev.exploreops.online 
+CATALOGUE_HOST=catalogue-dev.exploreops.online
+REDIS_HOST=redis-dev.exploreops.online
+USER_HOST=user-dev.exploreops.online
+CART_HOST=cart-dev.exploreops.online
