--- a/inventory.ini
+++ b/inventory.ini
@@ -13,6 +13,21 @@ user-dev.exploreops.online
 [cart]
 cart-dev.exploreops.online
 
+[mysql]
+mysql-dev.exploreops.online
+
+[shipping]
+shipping-dev.exploreops.online
+
+[rabbitmq]
+rabbitmq-dev.exploreops.online
+
+[payment]
+payment-dev.exploreops.online
+
+[frontend]
+frontend-dev.exploreops.online
+
 [all:vars]
 ansible_user=ec2-user
 ansible_password=DevOps321
@@ -21,3 +36,8 @@ CATALOGUE_HOST=catalogue-dev.exploreops.online
 REDIS_HOST=redis-dev.exploreops.online
 USER_HOST=user-dev.exploreops.online
 CART_HOST=cart-dev.exploreops.online
+MYSQL_HOST=mysql-dev.exploreops.online
+SHIPPING_HOST=shipping-dev.exploreops.online
+PAYMENT_HOST=payment-dev.exploreops.online
+RABBITMQ_HOST=rabbitmq-dev.exploreops.online
+
