--- a/shipping.yaml
+++ b/shipping.yaml
@@ -63,6 +63,11 @@
     ansible.builtin.systemd_service:
       daemon_reload: true
 
+  - name: install dependencies
+    ansible.builtin.pip:
+      name: PyMySQL
+      executable: pip3.9
+
   #load schema (in shell, we validate $? and loaded schema to mysql db, appuser and master data)
   #here, we have mysql db modules
 
