--- a/shipping.yaml
+++ b/shipping.yaml
@@ -65,8 +65,11 @@
 
   - name: install dependencies
     ansible.builtin.pip:
-      name: PyMySQL
+      name: "{{ item }}"
       executable: pip3.9
+    loop: 
+    - cryptography  #package required for password
+    - PyMySQL       #to connect
 
   #load schema (in shell, we validate $? and loaded schema to mysql db, appuser and master data)
   #here, we have mysql db modules
